[gd_scene load_steps=8 format=2]

[ext_resource path="res://Textures/Items/Crate.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Crate.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 53, 53 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 69, 3.75 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 58.875, 10 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 53, 10 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 52.973, 4.05406 )

[node name="Crate" type="KinematicBody2D"]
scale = Vector2( 1.85, 1.85 )
collision_layer = 4
collision_mask = 7
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="InteractArea2D" type="Area2D" parent="."]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractArea2D"]
position = Vector2( 0, -0.25 )
shape = SubResource( 2 )

[node name="FloatBody2D" type="KinematicBody2D" parent="."]
collision_layer = 16
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="FloatBody2D"]
position = Vector2( 0.125, 43 )
shape = SubResource( 3 )

[node name="OnCrateArea2D" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="OnCrateArea2D"]
position = Vector2( 0, -47.5 )
shape = SubResource( 4 )

[node name="OnAdventurer2D" type="Area2D" parent="."]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="OnAdventurer2D"]
position = Vector2( -6.92703e-07, 50 )
scale = Vector2( 1, 1 )
shape = SubResource( 5 )

[connection signal="body_entered" from="InteractArea2D" to="." method="_on_InteractArea2D_body_entered"]
[connection signal="body_exited" from="InteractArea2D" to="." method="_on_InteractArea2D_body_exited"]
[connection signal="body_entered" from="OnCrateArea2D" to="." method="_on_OnCrateArea2D_body_entered"]
[connection signal="body_exited" from="OnCrateArea2D" to="." method="_on_OnCrateArea2D_body_exited"]
[connection signal="body_entered" from="OnAdventurer2D" to="." method="_on_OnAdventurer2D_body_entered"]
[connection signal="body_exited" from="OnAdventurer2D" to="." method="_on_OnAdventurer2D_body_exited"]
